--- a/templates/entry_template.html
+++ b/templates/entry_template.html
@@ -1,4 +1,3 @@
-
 {% extends "base.html" %}
 {% load sekizai_tags %}
 
@@ -7,13 +6,13 @@
 {% block base_content %}
 <div id="maincontainer" class="maincontainer">
 	<div id="center_maincontainer" class="column">
-  {% placeholder nomenclature %}
-  {% placeholder annotation %}
-  {% placeholder expression %}
-  {% placeholder species %}
-  {% placeholder literature %}
-  {% placeholder associatedcomp %}
-  {% placeholder sequences %}
+  {% placeholder NomenclaturePlugin %}
+  {% placeholder AnnotationPlugin %}
+  {% placeholder ExpressionPlugin %}
+  {% placeholder SequencesPlugin %}
+  {% placeholder LiteraturePlugin %}
+  {% placeholder AssociatedcompPlugin %}
+  {% placeholder SequencesPlugin %}
 </div>
 <div id="left_maincontainer" class="column"></div>
 <div id="right_maincontainer" class="column"></div>
