--- a/templates/entry_template.html
+++ b/templates/entry_template.html
@@ -8,6 +8,7 @@
 	<div id="center_maincontainer" class="column">
   {% placeholder NomenclaturePlugin %}
   {% placeholder AnnotationPlugin %}
+  {% placeholder SpeciesPlugin %}
   {% placeholder ExpressionPlugin %}
   {% placeholder SequencesPlugin %}
   {% placeholder LiteraturePlugin %}
